# aether

./: .editorconfig  .env  .env.example  .gitignore  .init.lua  Makefile  Package.resolved  Package.swift  README.md  Taskfile.yml  db.sqlite3  docker-compose.yml  gunicorn_config.py  mix.exs  pyproject.toml
.devcontainer/: devcontainer.json
.lua/: aether.lua  fullmoon.lua
Resources/Views/: about.leaf  index.leaf  layout.leaf  todos.leaf
Sources/App/: configure.swift  routes.swift
accounts/: apps.py  fields.py  forms.py  middleware.py  models.py  signals.py  social.py  urls.py  utils.py  views.py
accounts/migrations/: 0001_initial.py  0002_profile_mastodon_char_limit.py  0003_profile_bio_profile_show_archive.py  0004_profile_crosspost_status_cafe_and_more.py  0005_remove_profile_status_cafe_default_face.py
aether/: asgi.py  settings.py  urls.py  wsgi.py
aether_notes/: admin.py  apps.py  db_signals.py  models.py  urls.py  views.py
aether_notes/migrations/: 0001_initial.py  0002_alter_note_author.py  0003_alter_note_text.py  0004_note_text_to_textfield_and_views_noteview_indexes.py  0005_rename_aether_notes_noteview_device_created_idx_aether_note_device__2b821b_idx.py  0006_note_created_device_id.py  0007_note_flags_noteflag.py  0008_alter_note_author.py  0009_note_user.py  (+3 more)
assets/: tailwind.config.js
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
lib/: aether_phx.ex  aether_phx_web.ex  aether_web.ex
src/: fool.fnl  main.fnl
static/: app.css
test/: test_helper.exs
views/: 404.tmpl  about.tmpl  home.tmpl  home_fancy.tmpl  layout.tmpl
(+79 files in other folders)
