[project]
name = "aether"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.5",
    "gunicorn>=23.0.0",
    "python-dotenv>=1.1.1",
    "django-two-factor-auth[phonenumbers]>=1.15.5",
]

[dependency-groups]
dev = [
    "djade>=1.5.0",
]
